# patcharena

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  task.example.yaml
patcharena/: __init__.py  __main__.py  cli.py  git_env.py  models.py  patch.py  report.py  result_parser.py  runner.py  workspace.py
patcharena/agents/: __init__.py  base.py  claude.py  claude_bedrock.py  codex.py  copilot.py  opencode.py
templates/: AGENTS.md  PATCHARENA_TASK.md.template
tests/: test_patcharena.py
