[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patcharena"
version = "0.1.0"
description = "Minimal benchmarking tool for coding agents."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
patcharena = "patcharena.cli:main"

[tool.setuptools.packages.find]
include = ["patcharena*"]
